<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="myApps"> My Nanodegree Apps</string>
    <string name="sportifyApp">Spotify Streamer</string>
    <string name="scoresApp"> Scores App</string>
    <string name="libraryApp"> Library App</string>
    <string name="builditbiggerApp"> Build it Bigger </string>
    <string name="readerApp"> XYZ Reader </string>
   <string name="capstone">Capstone: My Own App</string>
</resources>
