<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView android:text="@string/myApps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:paddingBottom="45sp"/>

        <Button
            android:id="@+id/spotify_app_btn_id"
            style="@style/portfolioAppStyle"
            android:text="@string/sportifyApp"
            />

        <Button
            android:id="@+id/scores_app_btn_id"
            style="@style/portfolioAppStyle"
            android:text="@string/scoresApp"/>

        <Button
            android:id="@+id/library_app_btn_id"
            style="@style/portfolioAppStyle"
            android:text="@string/libraryApp"/>

        <Button
            android:id="@+id/build_bigger_app_btn_id"
            style="@style/portfolioAppStyle"
            android:text="@string/builditbiggerApp"/>

        <Button
            android:id="@+id/reader_app_btn_id"
            style="@style/portfolioAppStyle"
            android:text="@string/readerApp"/>

        <Button
            android:id="@+id/my_own_app_btn_id"
            style="@style/myownAppStyle"
            android:text="@string/capstone"/>


    </LinearLayout>


 </ScrollView>